Fixing Bug 94895: The KDE4 codebase is much more efficient in the way it determines whether objects are onscreen, so we can now update the sky more often without stressing the CPU too much.

BUG: 94895
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=751536